--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -28,6 +28,7 @@
       To create a production bundle, use `npm run build`.
     -->
     <div id="testing1"></div>
+    <div id="testing2"></div>
 
     <div id="list1"></div>
 
